[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 0.0

[sub_resource type="CircleShape2D" id=9]
radius = 83.006

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 6 )
animation = "Fly"
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 4

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 1, 1, 1, 0.509804 )
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -9 )
shape = SubResource( 10 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="SoftCollision"]
[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
